--- a/iut-notify-api/pom.xml
+++ b/iut-notify-api/pom.xml
@@ -33,6 +33,7 @@
         <org.projectlombok.version>1.18.30</org.projectlombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <io.jsonwebtoken.version>0.12.6</io.jsonwebtoken.version>
+        <com.google.firebase.version>9.3.0</com.google.firebase.version>
     </properties>
     <dependencies>
         <dependency>
@@ -113,6 +114,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <!--=== FIREBASE ADMIN -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>${com.google.firebase.version}</version>
+        </dependency>
+
+        <!-- END FIREBASE ADMIN ===-->
     </dependencies>
 
     <build>
