--- a/iut-notify-api/src/main/resources/application.properties
+++ b/iut-notify-api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=dev
-spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 springdoc.default-produces-media-type=application/json
 server.servlet.context-path=/iut-notify/api/v1
 spring.mail.host=localhost
